<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

     <RadioGroup
         android:padding="20dp"
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
          <RadioButton
              android:padding="20dp"
              android:textSize="18sp"
              android:id="@+id/firstRadioGlide"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/first_radioText"
              android:onClick="onRadioButtonClicked"/>
          <RadioButton
              android:padding="20dp"
              android:textSize="18sp"
              android:id="@+id/secondRadioApp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/second_radioText"
              android:onClick="onRadioButtonClicked"/>
          <RadioButton
              android:padding="20dp"
              android:textSize="18sp"
              android:id="@+id/thirdRadioRetrofit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/third_radioText"
              android:onClick="onRadioButtonClicked"/>
     </RadioGroup>

     <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

</androidx.constraintlayout.widget.ConstraintLayout>